welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:23: error: not found: value getWorldLargeur
    if (x==getWorldLargeur)
           ^ZigZag:25: error: not found: value getWorldLargeur
      x=getWorldLargeur-1
        ^